@@ -40,7 +40,7 @@ heatmaply_cor(x, limits = c(-1, 1), colors = cool_warm, ...)
   colorbar_xanchor = if (row_dend_left) "right" else "left",
   colorbar_yanchor = "bottom", colorbar_xpos = if (row_dend_left) -0.1 else
   1.1, colorbar_ypos = 0, showticklabels = c(TRUE, TRUE),
-  dynamicTicks = FALSE, col)
+  dynamicTicks = FALSE, labRow, labCol, col)
 
 \method{heatmaply}{heatmapr}(x, colors = viridis(n = 256, alpha = 1, begin =
   0, end = 1, option = "viridis"), limits = NULL, na.value = "grey50",
@@ -62,7 +62,7 @@ heatmaply_cor(x, limits = c(-1, 1), colors = cool_warm, ...)
   colorbar_xanchor = if (row_dend_left) "right" else "left",
   colorbar_yanchor = "bottom", colorbar_xpos = if (row_dend_left) -0.1 else
   1.1, colorbar_ypos = 0, colorbar_len = 0.3, showticklabels = c(TRUE,
-  TRUE), dynamicTicks = FALSE)
+  TRUE), dynamicTicks = FALSE, labRow, labCol)
 }
 \arguments{
 \item{x}{can either be a heatmapr object, or a numeric matrix
@@ -308,6 +308,10 @@ makes the heatmap much faster (and the hover still works).}
 should plotly.js dynamically generate axis tick labels?
 Dynamic ticks are useful for updating ticks in response to zoom/pan interactions; however,
 they can not always reproduce labels as they would appear in the static ggplot2 image.}
+
+\item{labRow, labCol}{character vectors with row and column labels to use; these default to rownames(x) or colnames(x), respectively.
+if set to NA, they change the value in showticklabels to be FALSE. This is mainly to keep
+backward compatibility with gplots::heatmap.2.}
 }
 \description{
 An object of class heatmapr includes all the needed information
