@@ -11,6 +11,7 @@ heatmaply 0.11.0 (2017-09-25)
   - Improved test coverage.
   - Side color plots have better defaults colors, courtesy of RColorBrewer's qualitative color palettes.
   - file argument can now work with static file extensions such as png/jpeg/pdf (thanks to the webshot package). It is also now vectorized, allowing to pass things like: heatmaply(x, file = c("heatmaply_plot.html", "heatmaply_plot.png"))
+  - added labRow, labCol - to stay backward compatible with gplots::heatmap.2
 
 ### BUG FIXES
 * heatmaply
